--- a/src/app/states/userAchievementEntity/entity.template.html
+++ b/src/app/states/userAchievementEntity/entity.template.html
@@ -1,5 +1,5 @@
 <material-content class="entity">
-  <div class="entity-info switching-cards" ng-switch="$entityCtrl.entity.$active">
+  <div class="entity-info" ng-switch="$entityCtrl.entity.$active">
     <div ng-if="$entityCtrl.entity.$active"
          ng-include="::$entityCtrl.activeEntityTemplate"
          class="entity-info--active"></div>
