--- a/src/app/components/directive/tabs/material-tabs.scss
+++ b/src/app/components/directive/tabs/material-tabs.scss
@@ -3,6 +3,8 @@ $num-of-tabs: 3;
 @mixin tabs {
   @for $i from 1 through $num-of-tabs {
     &:nth-of-type(#{$i}) {
+      left: calc((100% / #{$num-of-tabs}) * #{$i - 1});
+
       &:checked {
         ~ .slide {
           left: calc((100% / #{$num-of-tabs}) * #{$i - 1});
@@ -18,6 +20,7 @@ material-tabs {
   display: flex;
 
   input[type="radio"][name="tab"] {
+    @include tabs;
     position: absolute;
     z-index: -1;
 
@@ -29,16 +32,6 @@ material-tabs {
 
         material-tab-content {
           display: block;
-        }
-      }
-    }
-
-    @include tabs;
-
-    &:first-of-type {
-      &:checked {
-        ~ .slide {
-          left: 0;
         }
       }
     }
@@ -67,14 +60,14 @@ material-tabs {
       justify-content: center;
       text-align: center;
       height: 56px;
-      transition: color $swift-ease-out-duration ease;
+      transition: color $swift-ease-out-duration $swift-ease-out-timing-function;
       width: 100%;
     }
 
     material-tab-content {
+      display: none;
       position: absolute;
       width: 100%;
-      display: none;
       left: 0;
 
       .empty-state {
