--- a/src/app/states/users/user/templates/activeEntity.html
+++ b/src/app/states/users/user/templates/activeEntity.html
@@ -1,3 +1,3 @@
 <user-card user="$entityCtrl.entityCopy"
-           save-user="$entityCtrl.saveEntity(entity, $event)"
+           save-user="$entityCtrl.saveEntity(user, $event)"
            close-user="$entityCtrl.closeEditingEntity($event)"></user-card>
