--- a/src/app/states/users/user/templates/othersEntity.html
+++ b/src/app/states/users/user/templates/othersEntity.html
@@ -17,8 +17,8 @@
     <div class="comment-input" ng-if="tabEntity.obj.userAchievement">
       <form name="userAchievementForm">
         <material-input-container>
-          <input required
-                 ng-model="tabEntity.obj.userAchievement.comment">
+          <textarea required
+                    ng-model="tabEntity.obj.userAchievement.comment"></textarea>
           <label>Введите комментарий:</label>
         </material-input-container>
         <material-button class="material-icon-button material-button--green"
