--- a/src/app/states/achievements/achievement/templates/activeEntity.html
+++ b/src/app/states/achievements/achievement/templates/activeEntity.html
@@ -1,4 +1,4 @@
-<achievement-card
-  achievement="$entityCtrl.entityCopy"
-  save-achievement="$entityCtrl.saveEntity(achievement, $event)"
-  close-achievement="$entityCtrl.closeEditingEntity($event)"></achievement-card>
+<achievement-card class="no-background"
+                  achievement="$entityCtrl.entityCopy"
+                  save-achievement="$entityCtrl.saveEntity(achievement, $event)"
+                  close-achievement="$entityCtrl.closeEditingEntity($event)"></achievement-card>
