--- a/src/app/states/users/user/templates/activeEntity.html
+++ b/src/app/states/users/user/templates/activeEntity.html
@@ -1,3 +1,4 @@
-<user-card user="$entityCtrl.entityCopy"
+<user-card class="no-background"
+           user="$entityCtrl.entityCopy"
            save-user="$entityCtrl.saveEntity(user, $event)"
            close-user="$entityCtrl.closeEditingEntity($event)"></user-card>
