User achievement toggle is fixed.

--- a/src/app/states/users/user/templates/othersEntity.html
+++ b/src/app/states/users/user/templates/othersEntity.html
@@ -2,7 +2,7 @@
   <material-card-title>
     <material-card-title-text>
       <span class="material-headline" ng-bind="::tabEntity.obj.name"></span>
-      <span class="material-subhead">Кол-во кармы: {{::achievement.obj.karma}}</span>
+      <span class="material-subhead">Кол-во кармы: {{::tabEntity.obj.karma}}</span>
     </material-card-title-text>
     <material-card-title-media ng-if="::tabEntity.obj.icon">
       <div class="material-media-med">
